<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.doneu.backgammoncounter.NewChallengeActivity"
    tools:showIn="@layout/activity_new_challenge">

    <TextView
        android:id="@+id/againstTextView"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginRight="11dp"
        android:text="@string/against"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtPlayerName"
        app:layout_constraintRight_toLeftOf="@+id/edtPlayerName" />

    <EditText
        android:id="@+id/edtPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_PlayerName"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="72dp"
        android:maxLength="15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@id/edtPlayerName">

        <EditText
            android:id="@+id/myPoints"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/default_noPoints"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/scoreDivider"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/oppPoints"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/default_noPoints"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minWidth="40dp"
        android:onClick="onClick_Contact"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        android:text="@string/ellipsis"/>
        <!--android:src="@android:drawable/ic_menu_agenda"-->

</android.support.constraint.ConstraintLayout>
