<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.doneu.backgammoncounter.GameActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/game_layout">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/light_dark_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="0">

        <LinearLayout
            android:id="@+id/center_point"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/left_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/center_point"

            android:background="?attr/themed_GameBackground_dark"
            android:rotation="180"/>
            <!--android:alpha="0.8"-->

        <LinearLayout
            android:id="@+id/right_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/center_point"

            android:background="?attr/themed_GameBackground_light"
            android:rotation="180"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:rotation="0">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:rotation="180">

            <TextView
                android:id="@+id/oppExtraInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"

                tools:text="Lucky Luke erhöht auf 128 Punkte" />

            <TextView
                android:id="@+id/oppNameAndPointsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"

                tools:text="Jolly Jumper  •  395 : 350 (+45)" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:gravity="center">

                <Button
                    android:id="@+id/oppLostBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick_oppLostBtn"
                    android:text="@string/lost" />

                <Button
                    android:id="@+id/oppIncreaseBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick_oppIncreaseBtn"
                    android:text="@string/increase" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:rotation="90">

            <!--android:background="@drawable/bg_score"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->

            <Button
                android:id="@+id/pointsUpBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick_pointsUpBtn"
                android:text="@string/up"/>

            <TextView
                android:id="@+id/pointsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/default_PointsAtStart"
                android:textAlignment="center"
                android:textSize="76sp"
                android:textColor="@color/white"

                tools:text="32"/>

            <Button
                android:id="@+id/pointsDownBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick_pointsDownBtn"
                android:text="@string/down"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myExtraInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"

                tools:text="Jolly Jumper erhöht auf 128 Punkte" />

            <TextView
                android:id="@+id/myNameAndPointsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"

                tools:text="Lucky Luke  •  350 : 395 (-45)" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:gravity="center">

                <Button
                    android:id="@+id/myLostBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick_myLostBtn"
                    android:text="@string/lost" />

                <Button
                    android:id="@+id/myIncreaseBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick_myIncreaseBtn"
                    android:text="@string/increase" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
